css/style.css
/* ... */
.race-meeting p,
.race-meeting i,
.race-meeting strong,
.race-meeting span,
.race-meeting-3 strong,
.race-meeting-3 i,
.race-meeting-3 span,
.race-meeting-2 strong,
.race-meeting-2 span,
.race-meeting-2 i ,
.race-meeting-4 strong,
.race-meeting-4 span,
.race-meeting-4 i ,
.race-meeting-5 strong,
.race-meeting-5 span,
.race-meeting-5 i {
  line-height: 1.2;
  display: block;
}

.race-meeting i ,
.race-meeting-2 i ,
.race-meeting-3 i,
.race-meeting-4 i,  
.race-meeting-5 i  {
  display: inline-block;
  color: #666;
}

.race-meeting {
  height: 40px;
}

.race-meeting div,
.race-meeting-3 div {
  margin: 6px 0;
}

.race-meeting-2 div:first-child {
 /*  margin: 12px 0 0 0; */
}

.race-meeting-2 .pull-left {
 margin: 12px 0 0 0; 
}


.race-meeting-2,
.race-meeting-3 {
  height: 54px;
}

.race-meeting-2 i.fa,
.race-meeting-3 i.fa {
  line-height: 54px;
}

.race-time {
  color: #333;
  height: 54px;
  font-size: 16px;
  text-align: center;
  line-height: 54px;
}

.race-meeting-2 i.play-icon {
  color: #c71414;
  line-height: 1.2;
  margin-right: 5px;
  font-size: 18px;
  vertical-align: middle;
}

.head-clock-wrapper,
.head-clock-wrapper .carousel {
  background: url(../img/clock-bg.png) center center repeat-x; 
  height: 68px;
  text-align: center;
  color: #fff;
  overflow: hidden;
}

.head-orange{
  background: url(../img/clock-bg.png) center center repeat-x; 
}

.head-clock-wrapper .carousel .carousel-indicators {
  bottom: 0;
}

.head-clock-wrapper .carousel-content span {
  text-align: center;
  font-size: 30px;
}

.head-clock-wrapper .carousel-control {
  line-height: 68px;
}

.carousel-control.left,
.carousel-control.right {
  background-image: none;
}

/**/

.race-meeting-4,.race-meeting-5 {
  height: 85px;
  margin: 3px 0 0 0;
}

.race-time-4{
  color: #ccc;
  height: 85px;
  font-size: 18px;
  text-align: center;
  line-height: 85px;
  
}

.race-meeting-4 b,.race-meeting-5 b{
   width: 30px;
  display: inline-block; 
}

.tx-race-1st{
  font-weight: bold;
}

.race-fc{
  background: #222;
    /* border-bottom: 3px solid #333; */
    display: block;
    overflow: hidden;
  margin-bottom: 0.5%;
    padding-bottom: 6px;
}

.race-meeting-4 p{
  margin-right: 5px; 
  display: inline-block; 
  margin-left: 10px;
}

.race-meeting-5 p{
  display: inline-block; 
}

.tb-row span i{
  line-height: 1.2;
}

.win-4{
  margin: 12px 0 0 0;
  width: 45%;
    float: left;
}

.win-5{
  margin: 12px 0 0 0;
  width: 50%;
    float: left;
}

.win-6{
  margin: 12px 0 0 0;
  width: 50%;
    float: left;
}

.race-forecast-4{
    width: 50%;
  margin-top: 5px;
}


.race-forecast-4 p{
  margin-right: 5px;
    display: inline-block;
  margin-left: 10px;
}

.race-meeting-4 .fa-chevron-right:before{
      line-height: 7.2;
}

.race-meeting-5 .fa-chevron-right:before{
      line-height: ;
}

.tx-4{
      /* width: 3%; */
    margin: 6px 0 0 0;
    /* float: left; */
    display: inline-block;
    position: relative;
    text-align: left;
}

.race-count-4 {
    width: 41%;
    float: left;
}

.statusBox{
  padding: 10px;
    text-align: center;
}

.race-card-4.dog-card, .race-card-4.dog-card-2 {
    background: #222;
}

.race-position{
  line-height: 85px;
  font-size: 34px;
  text-align: right;
}

.race-position small{
  font-size: 12px;
  vertical-align: top;
}

.race-card-4 b{
  width: 100px;
  font-size: 18px;
}

.dog-name-details{
  display: inline-block;
}

.meeting-group-2 a {
  background: #222;
  border-bottom: 1px solid #333;
  cursor: pointer;
  display: block;
  overflow: hidden;
  transition: all .2s ease-in-out;
}

.dog-name{
  font-size: 15px;
  font-weight: bold;
  margin: 0;
}

.dog-race-group{
  display: inline-block;
}

 .dog-race-detail{
   display: inline-block;
   line-height: 1.2;
 }

 .dog-col{
   width: 50%;
 }
 
 .hr{
   width: 100%;
   border-bottom: 1px solid #333;
   height: 70%;
   display: block;
   margin-bottom: 5px;
 }
 
 .race-meeting-5-i{
  width: 4%;
  line-height: 6.2;
 }

/* Bootstrap Nav recolor */

.nav-tabs {
  background: #fc9a12 url(../img/clock-bg-3.png) repeat;
  border-bottom: 3px solid #ccc;
}

.nav-tabs > li{
  margin-bottom: 0px;
  width: 25%;
  text-align: center;
  text-transform: uppercase;
  font-weight: 700;
}

.nav-tabs li a {
  color: #fff;
  cursor: pointer;
  background: rgba(0,0,0,.3);
  font-size: 14px;
}

.nav-tabs > li.active > a,
.nav-tabs > li.active > a:hover,
.nav-tabs > li.active > a:focus {
  background: #555555; /* Old browsers */
  background: -moz-linear-gradient(top,  #fff 0%, #ccc 100%); /* FF3.6-15 */
  background: -webkit-linear-gradient(top,  #55fff5555 0%,#ccc 100%); /* Chrome10-25,Safari5.1-6 */
  background: linear-gradient(to bottom,  #fff 0%,#ccc 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */

  color: #333;
  border-color: #ccc;
}

.nav > li > a:hover,
.nav > li > a:focus {
  background: #555555; /* Old browsers */
  background: -moz-linear-gradient(top,  #555555 0%, #333333 100%); /* FF3.6-15 */
  background: -webkit-linear-gradient(top,  #555555 0%,#333333 100%); /* Chrome10-25,Safari5.1-6 */
  background: linear-gradient(to bottom,  #555555 0%,#333333 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#555555', endColorstr='#333333',GradientType=0 ); /* IE6-9 */

  color: #fff;
  border-color: #333;
}

/* Dog Numbers Icon */

.num-1 {
  background: url(../img/num-1.png) no-repeat;
}

.num-2 {
  background: url(../img/num-2.png) no-repeat;
}

.num-3 {
  background: url(../img/num-3.png) no-repeat;
}

.num-4 {
  background: url(../img/num-4.png) no-repeat;
}

.num-5 {
  background: url(../img/num-5.png) no-repeat;
}

.num-6 {
  background: url(../img/num-6.png) no-repeat;
}

.dog-icon-16 {
  display: inline-block;
  margin-right: 8px;
  vertical-align: middle;
  height: 16px;
  width: 16px;
  background-size: 16px 16px;
  margin: 0;
}
/* ... */

